--- a/index.html
+++ b/index.html
@@ -4,38 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="Views/css/general_styles.css" />
   </head>
-  <body>
-    <h1>This is main</h1>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed vel enim
-      veritatis voluptatum dolorum cumque laborum sapiente! Magnam sint commodi
-      numquam minus debitis voluptate quo illo illum. Consequuntur, tenetur
-      repellat.
-    </p>
-
-    <div class="container">
-      <h2>This is container</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus,
-        aspernatur, dignissimos, minus assumenda quae tempore vitae voluptas
-        obcaecati repudiandae recusandae labore perspiciatis? Quisquam, commodi?
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
-        soluta laudantium, facilis temporibus nesciunt ipsum qui vel quod nemo.
-        Cum consequuntur, similique atque quas impedit quos aspernatur earum
-        quod minima!
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt animi
-        quisquam deleniti sit earum ad soluta odit dignissimos ullam recusandae
-        nisi veritatis suscipit pariatur at omnis repellat sequi, voluptatum
-        similique.
-      </p>
-    </div>
-  </body>
+  <body></body>
 </html>
