--- a/index.html
+++ b/index.html
@@ -5,18 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+
+  </body>
 
   <script type="module">
+    
+    import {ProductRepo } from "./Repository/ProductRepo.js"
     import {
       userLoggedSessionKey,
-      testUserObject,
     } from "./Config/Constants.js";
     import { UsersRepo } from "./Repository/UsersRepo.js";
     let loggedUser =
-      UsersRepo.getLoggedUserDataBySessionKey(userLoggedSessionKey) ||
-      testUserObject;
-
+      UsersRepo.getLoggedUserDataBySessionKey(userLoggedSessionKey)
     console.log(loggedUser);
+
+   localStorage.setItem("Products", JSON.stringify([
+  {
+    "id": 1,
+    "name": "Product 1",
+    "price": 10.99,
+    "quantity": 5,
+    "description": "This is Product 1.",
+    "categoryId": 1,
+    "imgPath": "Images/Products/Untitled.jpg"
+  },
+  {
+    "id": 2,
+    "name": "Product 2",
+    "price": 15.99,
+    "quantity": 3,
+    "description": "This is Product 2.",
+    "categoryId": 2,
+    "imgPath": "Images/Products/Untitled.jpg"
+  },
+  {
+    "id": 3,
+    "name": "Product 3",
+    "price": 20.99,
+    "quantity": 7,
+    "description": "This is Product 3.",
+    "categoryId": 1,
+    "imgPath": "Images/Products/Untitled.jpg"
+  }
+]
+));
+
+console.log(ProductRepo.GetAllProducts())
   </script>
 </html>
