--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="container-fluid d-flex align-items-center justify-content-between">
             <!-- Logo -->
             <a class="navbar-brand ms-5" href="#">
-                <img id="logo" src="" alt="Logo" width="140" height="50">
+                <img id="logo" src="Images/logo.png" alt="Logo" width="140" height="50">
             </a>
     
             <!-- Toggle button for mobile view -->
