--- a/index.html
+++ b/index.html
@@ -164,109 +164,7 @@
         </div>
     </div>
 
-    <!-- Second Row of Product Cards -->
-    <div class="container mt-4">
-        <div class="row" id="product-cards-2">
-            <!-- هنا هتظهر الكاردس التانية -->
-        </div>
-    </div>
-    
 <script type="module" src="Views/js/homeProduct.js"></script>
-
-<!-- <script>
-            // Sample data for demonstration
-            const productData = [
-            {
-                "id": 1,
-                "name": "Product 1",
-                "price": 10.99,
-                "quantity": 5,
-                "description": "This is Product 1.",
-                "image": "images/staticproduct1.png", // Local image path
-                "category": "Category 1"
-            },
-            {
-                "id": 2,
-                "name": "Product 2",
-                "price": 15.99,
-                "quantity": 3,
-                "description": "This is Product 2.",
-                "image": "images/product2.jpg",
-                "category": "Category 2"
-            },
-            {
-                "id": 3,
-                "name": "Product 3",
-                "price": 20.99,
-                "quantity": 7,
-                "description": "This is Product 3.",
-                "image": "images/product3.jpg",
-                "category": "Category 1"
-            },
-            {
-                "id": 4,
-                "name": "Product 4",
-                "price": 20.99,
-                "quantity": 2,
-                "description": "This is Product 4.",
-                "image": "images/product4.jpg",
-                "category": "Category 2"
-            },
-        ];
-
-        // Store data in local storage for demonstration
-        localStorage.setItem('products', JSON.stringify(productData));
-
-        // Function to generate product cards
-        function generateProductCards(filter = '') {
-            const products = JSON.parse(localStorage.getItem('products'));
-            const container = document.getElementById('product-cards');
-            container.innerHTML = ''; // Clear existing content
-
-            const filteredProducts = products.filter(product => 
-                product.name.toLowerCase().includes(filter.toLowerCase()) ||
-                product.category.toLowerCase().includes(filter.toLowerCase())
-            );
-
-            filteredProducts.forEach(product => {
-                const cardHTML = `
-                    <div class="col-6 col-md-4 col-lg-3 mb-4"> <!-- Responsive classes --
-                        <div class="card">
-                            <img src="${product.image}" class="card-img-top" alt="${product.name}">
-                            <div class="card-body">
-                                <h5 class="card-title">${product.name}</h5>
-                                <p class="card-text">${product.description}</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <span class="h5 mb-0 price">$${product.price.toFixed(2)}</span>
-                                    <div>
-                                        <i class="fas fa-star text-warning"></i>
-                                        <i class="fas fa-star text-warning"></i>
-                                        <i class="fas fa-star text-warning"></i>
-                                        <i class="fas fa-star-half-alt text-warning"></i>
-                                        <small class="text-muted">(4.5)</small>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card-footer d-flex justify-content-center">
-                                <button class="btn btn-primary btn-sm">Add to Cart</button>
-                            </div>
-                        </div>
-                    </div>
-                `;
-                container.innerHTML += cardHTML;
-            });
-        }
-
-        // Handle search input
-        document.getElementById('search-input').addEventListener('input', function() {
-            const searchTerm = this.value;
-            generateProductCards(searchTerm); // Pass the search term to filter products
-        });
-
-        // Generate cards on page load
-        generateProductCards();
-</script> -->
-
 
 
 
@@ -349,7 +247,14 @@
 <!-- Tag Before Categorey -->
 <span class="container tagTo ">Best Selling Products</span>
 
-
+    <!-- Second Row of Product Cards -->
+    <div class="container mt-4">
+        <div class="row" id="product-cards-2">
+            <!-- هنا هتظهر الكاردس التانية -->
+        </div>
+    </div>
+    
+<script type="module" src="Views/js/homeProduct.js"></script>
 
 
 
