--- a/index.html
+++ b/index.html
@@ -258,10 +258,49 @@
 
 
 
+<!-- Img bg black with button -->
+<section class="hero-section mt-5">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <h1 class="hero-title">Enhance Your Music Experience</h1>
+          <p class="hero-description">Immerse yourself in the ultimate sound journey with our premium audio solutions..</p>
+          <!-- <a href="#" class="btn btn-primary btn-lg">Get Started</a> -->
+          <button type="button" class="btn btn-outline-danger btn-animated">View All Products</button>
+        </div>
+        <div class="col-md-6">
+          <img src="Views/images/GeneralHome/speaker.png" alt="Hero Image" class="img-fluid hero-image">
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 
+<!-- red rec. This  Months -->
+<div class="custom-rectangle mb-3">
+    <span class="custom-rectangle-text">Our Products</span>
+</div>
 
+<!-- Tag Before Categorey -->
+<span class="container tagTo ">Explore Our Products</span>
+
+    <!-- Third Row of Product Cards -->
+    <div class="container mt-4">
+        <div class="row" id="product-cards-3">
+            <!-- هنا هتظهر الكاردس التالته -->
+        </div>
+    </div>
+<script type="module" src="Views/js/homeProduct.js"></script>
+
+    
+        <!-- Fourth Row of Product Cards -->
+        <div class="container mt-4">
+            <div class="row" id="product-cards-4">
+                <!-- هنا هتظهر الكاردس الرابعه -->
+            </div>
+        </div>
+<script type="module" src="Views/js/homeProduct.js"></script>
 
 
 
