add new features

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
 
 
-<!-- Button to see all product -->
+<!-- Button 1 to see all product -->
 <div class="container d-flex justify-content-center align-items-center mt-4">
     <div class="row">
         <div class="col-12 text-center">
@@ -277,7 +277,7 @@
 
 
 
-<!-- red rec. This  Months -->
+<!-- red rec. Our Products -->
 <div class="custom-rectangle mb-3">
     <span class="custom-rectangle-text">Our Products</span>
 </div>
@@ -302,10 +302,54 @@
         </div>
 <script type="module" src="Views/js/homeProduct.js"></script>
 
+<!-- Button 2 to see all product -->
+<div class="container d-flex justify-content-center align-items-center mt-4">
+    <div class="row">
+        <div class="col-12 text-center">
+            <button type="button" class="btn btn-outline-danger btn-animated">View All Products</button>
+        </div>
+    </div>
+</div>
+
+
+
+<!-- red rec. Featured -->
+<div class="custom-rectangle mb-3">
+    <span class="custom-rectangle-text">Featured</span>
+</div>
+
+<!-- Tag Before Categorey -->
+<span class="container tagTo ">New Arrival</span>
 
 
 
 
+<!-- Grid of Photos Section -->
+<div class="container my-5">
+    <div class="photo-grid">
+        <!-- Large item -->
+        <div class="photo-item photo-large">
+            <img src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0NzEyNjZ8MHwxfHNlYXJjaHwxfHxuYXR1cmV8ZW58MHwwfHx8MTcyMTA0MjYwMXww&ixlib=rb-4.0.3&q=80&w=1080" alt="Nature" class="img-fluid">
+            <div class="photo-content">
+                <h3>Explore Nature</h3>
+                <p>Discover the beauty of the natural world</p>
+            </div>
+        </div>
+        <!-- Two small items -->
+        <div class="photo-item">
+            <img src="https://images.unsplash.com/photo-1493770348161-369560ae357d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0NzEyNjZ8MHwxfHNlYXJjaHw2fHxmb29kfGVufDB8MHx8fDE3MjEwNDI2MTR8MA&ixlib=rb-4.0.3&q=80&w=1080" alt="Food" class="img-fluid">
+            <div class="photo-content">
+                <h4>Culinary Delights</h4>
+            </div>
+        </div>
+        <div class="photo-item">
+            <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0NzEyNjZ8MHwxfHNlYXJjaHw1fHx0ZWNobm9sb2d5fGVufDB8MHx8fDE3MjEwNDI2Mjh8MA&ixlib=rb-4.0.3&q=80&w=1080" alt="Technology" class="img-fluid">
+            <div class="photo-content">
+                <h4>Tech Innovations</h4>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
