add grid section

--- a/index.html
+++ b/index.html
@@ -324,30 +324,32 @@
 
 
 
+
+
 <!-- Grid of Photos Section -->
 <div class="container my-5">
     <div class="photo-grid">
         <!-- Large item -->
-        <div class="photo-item photo-large">
-            <img src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0NzEyNjZ8MHwxfHNlYXJjaHwxfHxuYXR1cmV8ZW58MHwwfHx8MTcyMTA0MjYwMXww&ixlib=rb-4.0.3&q=80&w=1080" alt="Nature" class="img-fluid">
+        <a href="#" class="photo-item photo-large"> <!-- رابط للعنصر الكبير -->
+            <img src="Views/images/GeneralHome/perfum.jpg" alt="Nature" class="img-fluid">
             <div class="photo-content">
-                <h3>Explore Nature</h3>
-                <p>Discover the beauty of the natural world</p>
+                <h3>Perfume</h3>
+                <p>GUCCI INTENSE OUD EDP</p>
             </div>
-        </div>
+        </a>
         <!-- Two small items -->
-        <div class="photo-item">
-            <img src="https://images.unsplash.com/photo-1493770348161-369560ae357d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0NzEyNjZ8MHwxfHNlYXJjaHw2fHxmb29kfGVufDB8MHx8fDE3MjEwNDI2MTR8MA&ixlib=rb-4.0.3&q=80&w=1080" alt="Food" class="img-fluid">
-            <div class="photo-content">
-                <h4>Culinary Delights</h4>
-            </div>
-        </div>
-        <div class="photo-item">
-            <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0NzEyNjZ8MHwxfHNlYXJjaHw1fHx0ZWNobm9sb2d5fGVufDB8MHx8fDE3MjEwNDI2Mjh8MA&ixlib=rb-4.0.3&q=80&w=1080" alt="Technology" class="img-fluid">
+        <a href="#" class="photo-item"> <!-- رابط للعنصر الأول الصغير -->
+            <img src="Views/images/GeneralHome/smartwatch.jpg" alt="Food" class="img-fluid">
             <div class="photo-content">
                 <h4>Tech Innovations</h4>
             </div>
-        </div>
+        </a>
+        <a href="#" class="photo-item"> <!-- رابط للعنصر الثاني الصغير -->
+            <img src="Views/images/GeneralHome/clothes.jpg" alt="Technology" class="img-fluid">
+            <div class="photo-content">
+                <h4>Women’s Collections</h4>
+            </div>
+        </a>
     </div>
 </div>
 
