--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
     <!-- First Row of Product Cards -->
     <div class="container mt-4">
-        <div class="row" id="product-cards-1">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-4 g-4" id="product-cards-1">
             <!-- هنا هتظهر الكاردس الأولى -->
         </div>
     </div>
@@ -249,7 +249,7 @@
 
     <!-- Second Row of Product Cards -->
     <div class="container mt-4">
-        <div class="row" id="product-cards-2">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-4 g-4" id="product-cards-2">
             <!-- هنا هتظهر الكاردس التانية -->
         </div>
     </div>
@@ -287,7 +287,7 @@
 
     <!-- Third Row of Product Cards -->
     <div class="container mt-4">
-        <div class="row" id="product-cards-3">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-4 g-4" id="product-cards-3">
             <!-- هنا هتظهر الكاردس التالته -->
         </div>
     </div>
@@ -296,7 +296,7 @@
     
         <!-- Fourth Row of Product Cards -->
         <div class="container mt-4">
-            <div class="row" id="product-cards-4">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-4 g-4" id="product-cards-4">
                 <!-- هنا هتظهر الكاردس الرابعه -->
             </div>
         </div>
