--- a/index.html
+++ b/index.html
@@ -133,27 +133,30 @@
 <span class="container tagTo">Flash Sales</span>
 
 <!-- Timer -->
-<div class="container col-md-8 text-center row justify-content-center">
-<div class="row mb-2" id="countdown">
-    <div class="col-3">
-        <div class="countdown-item" id="days">00</div>
-        <div class="countdown-label">Days</div>
-    </div>
-    <div class="col-3">
-        <div class="countdown-item" id="hours">00</div>
-        <div class="countdown-label">Hours</div>
-    </div>
-    <div class="col-3">
-        <div class="countdown-item" id="minutes">00</div>
-        <div class="countdown-label">Minutes</div>
-    </div>
-    <div class="col-3">
-        <div class="countdown-item" id="seconds">00</div>
-        <div class="countdown-label">Seconds</div>
+<div class="container text-center">
+    <div class="row justify-content-center" id="countdown">
+        <!-- الأيام -->
+        <div class="col-6 col-sm-3 mb-3">
+            <div class="countdown-item display-4 fw-bold" id="days">00</div>
+            <div class="countdown-label fs-5">Days</div>
+        </div>
+        <!-- الساعات -->
+        <div class="col-6 col-sm-3 mb-3">
+            <div class="countdown-item display-4 fw-bold" id="hours">00</div>
+            <div class="countdown-label fs-5">Hours</div>
+        </div>
+        <!-- الدقائق -->
+        <div class="col-6 col-sm-3 mb-3">
+            <div class="countdown-item display-4 fw-bold" id="minutes">00</div>
+            <div class="countdown-label fs-5">Minutes</div>
+        </div>
+        <!-- الثواني -->
+        <div class="col-6 col-sm-3 mb-3">
+            <div class="countdown-item display-4 fw-bold" id="seconds">00</div>
+            <div class="countdown-label fs-5">Seconds</div>
+        </div>
     </div>
 </div>
-</div>
-
 
 
 
