responsive red tag

--- a/index.html
+++ b/index.html
@@ -126,11 +126,25 @@
 
 
 <!-- red rec. Today's -->
-<div class="custom-rectangle mb-3">
-    <span class="custom-rectangle-text ">Today's</span>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-12 d-flex align-items-center">
+            <!-- المستطيل الأحمر -->
+            <div class="custom-rectangle me-2"></div>
+            <!-- النص "Today's" -->
+            <span class="custom-rectangle-text">Today's</span>
+        </div>
+    </div>
 </div>
-<!-- Tag Before Categorey -->
-<span class="container tagTo">Flash Sales</span>
+
+<!-- Tag Before Category -->
+<div class="container mt-4 ms-0">
+    <h2 class="tagTo">Flash Sales</h2>
+</div>
+
+
+
+
 
 <!-- Timer -->
 <div class="container text-center">
@@ -185,14 +199,27 @@
 
 <hr class="container w-50 justify-content-center align-items-center mt-4 border-3 ">
 
+
+
 <!-- red rec. Categories -->
-<div class="custom-rectangle mb-3">
-    <span class="custom-rectangle-text">Categories</span>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-12 d-flex align-items-center">
+            <!-- المستطيل الأحمر -->
+            <div class="custom-rectangle me-2"></div>
+            <!-- النص "Today's" -->
+            <span class="custom-rectangle-text">Categories</span>
+        </div>
+    </div>
+</div>
+
+<!-- Tag Before Category -->
+<div class="container mt-4 ms-0">
+    <h2 class="tagTo">Browse By Category</h2>
 </div>
 
 
-<!-- Tag Before Categorey -->
-<span class="container tagTo ">Browse By Category</span>
+
 
 <!-- Browse by Category -->
 <section class="logo-cloud py-5">
@@ -242,13 +269,27 @@
 
 <hr class="container w-50 justify-content-center align-items-center mt-4 border-3 ">
 
-<!-- red rec. This  Months -->
-<div class="custom-rectangle mb-3">
-    <span class="custom-rectangle-text">This Month</span>
+
+<!-- red rec. This Month -->
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-12 d-flex align-items-center">
+            <!-- المستطيل الأحمر -->
+            <div class="custom-rectangle me-2"></div>
+            <!-- النص "This Month" -->
+            <span class="custom-rectangle-text">This Month</span>
+        </div>
+    </div>
 </div>
 
-<!-- Tag Before Categorey -->
-<span class="container tagTo ">Best Selling Products</span>
+<!-- Tag Before Category -->
+<div class="container mt-4 ms-0">
+    <h2 class="tagTo">Best Selling Products</h2>
+</div>
+
+
+
+
 
     <!-- Second Row of Product Cards -->
     <div class="container mt-4">
@@ -280,13 +321,29 @@
 
 
 
+
+
 <!-- red rec. Our Products -->
-<div class="custom-rectangle mb-3">
-    <span class="custom-rectangle-text">Our Products</span>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-12 d-flex align-items-center">
+            <!-- المستطيل الأحمر -->
+            <div class="custom-rectangle me-2"></div>
+            <!-- النص "Our Products" -->
+            <span class="custom-rectangle-text">Our Products</span>
+        </div>
+    </div>
 </div>
 
-<!-- Tag Before Categorey -->
-<span class="container tagTo ">Explore Our Products</span>
+<!-- Tag Before Category -->
+<div class="container mt-4 ms-0">
+    <h2 class="tagTo">Explore Our Products</h2>
+</div>
+
+
+
+
+
 
     <!-- Third Row of Product Cards -->
     <div class="container mt-4">
@@ -316,15 +373,25 @@
 
 
 
+
+
+
 <!-- red rec. Featured -->
-<div class="custom-rectangle mb-3">
-    <span class="custom-rectangle-text">Featured</span>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-12 d-flex align-items-center">
+            <!-- المستطيل الأحمر -->
+            <div class="custom-rectangle me-2"></div>
+            <!-- النص "Featured" -->
+            <span class="custom-rectangle-text">Featured</span>
+        </div>
+    </div>
 </div>
 
-<!-- Tag Before Categorey -->
-<span class="container tagTo ">New Arrival</span>
-
-
+<!-- Tag Before Category -->
+<div class="container mt-4 ms-0">
+    <h2 class="tagTo">New Arrival</h2>
+</div>
 
 
 
