--- a/index.html
+++ b/index.html
@@ -305,19 +305,21 @@
 <!-- Img bg black with button -->
 <section class="hero-section mt-5">
     <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-6">
-          <h1 class="hero-title">Enhance Your Music Experience</h1>
-          <p class="hero-description">Immerse yourself in the ultimate sound journey with our premium audio solutions..</p>
-          <!-- <a href="#" class="btn btn-primary btn-lg">Get Started</a> -->
-          <button type="button" class="btn btn-outline-danger btn-animated">View All Products</button>
+        <div class="row align-items-center">
+            <!-- النص والزر -->
+            <div class="col-12 col-md-6 order-2 order-md-1 text-center text-md-start">
+                <h1 class="hero-title">Enhance Your Music Experience</h1>
+                <p class="hero-description">Immerse yourself in the ultimate sound journey with our premium audio solutions.</p>
+                <button type="button" class="btn btn-outline-danger btn-animated">View All Products</button>
+            </div>
+
+            <!-- الصورة -->
+            <div class="col-12 col-md-6 order-1 order-md-2 text-center">
+                <img src="Views/images/GeneralHome/speaker.png" alt="Hero Image" class="img-fluid hero-image">
+            </div>
         </div>
-        <div class="col-md-6">
-          <img src="Views/images/GeneralHome/speaker.png" alt="Hero Image" class="img-fluid hero-image">
-        </div>
-      </div>
     </div>
-  </section>
+</section>
 
 
 
