--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a href="#" class="nav-link selected">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Contact</a>
+                        <a href="Views/contact.html" class="nav-link">Contact</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">About</a>
