--- a/index.html
+++ b/index.html
@@ -6,17 +6,13 @@
     <title>SwiftCart</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
     <link rel="stylesheet" href="Views/css/bootstrap.min.css">
     <link rel="stylesheet" href="Views/css/home.css" >
     <link rel="stylesheet" href="Views/css/bootstrap-icons.css">
-<<<<<<< HEAD
     <script src="Views/js/bootstrap.bundle.min.js"></script>
     <script src="Views/js/home.js"></script>
     <!-- <script type="module" src="Views/js/homeProduct.js"></script> -->
 
-=======
->>>>>>> 32d65cd (Update index.html)
    
 
 </head>
@@ -46,13 +42,13 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="#" class="nav-link selected">Home</a>
+                        <a href="index.html" class="nav-link selected">Home</a>
                     </li>
                     <li class="nav-item">
                         <a href="Views/contact.html" class="nav-link">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">About</a>
+                        <a href="#about" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">Sign up</a>
@@ -62,7 +58,7 @@
     
             <!-- Search Bar and Cart Icon -->
     <!-- Search Bar Section -->
-    <div class="">
+    <!-- <div class="">
         <div class="search-wrapper">
             <div class="search-box">
                 <input type="text" class="search-input form-control" placeholder="Search anything..." id="search-input">
@@ -74,7 +70,7 @@
                     <i class="fas fa-shopping-cart fa-cart-shopping" style="color: #db4444; font-size: 30px;"></i>
                 </a>
             </div>
-        </div>
+        </div> -->
     </nav>
 
 
@@ -195,7 +191,7 @@
 <div class="container d-flex justify-content-center align-items-center mt-4">
     <div class="row">
         <div class="col-12 text-center">
-            <button type="button" class="btn btn-outline-danger btn-animated">View All Products</button>
+            <a href="views/catalog.html" class="btn btn-outline-danger btn-animated">View All Products</a>
         </div>
     </div>
 </div>
@@ -230,39 +226,39 @@
     <div class="container">
       <div class="row row-cols-2 row-cols-md-3 row-cols-lg-6 g-4 justify-content-center align-items-center">
         <div class="col">
-          <a href="link-to-apple-page" class="logo-item text-center square-container">
-            <i class="bi bi-phone fs-1"></i>
-            <p>Phones</p>
+          <a href="Views/catalog.html#all" class="logo-item text-center square-container">
+            <i class="bi bi-check-all fs-1"></i>
+            <p>All</p>
           </a>
         </div>
         <div class="col">
-          <a href="link-to-microsoft-page" class="logo-item text-center square-container">
+          <a href="Views/catalog.html#Electronics" class="logo-item text-center square-container">
             <i class="bi bi-laptop fs-1"></i>
-            <p class="categoryName">Laptops</p>
+            <p class="categoryName">Electronics</p>
           </a>
         </div>
         <div class="col">
-          <a href="link-to-google-page" class="logo-item text-center square-container">
-            <i class="bi bi-smartwatch fs-1"></i>
-            <p class="categoryName">SmartWatch</p>
+          <a href="Views/catalog.html#Clothes" class="logo-item text-center square-container">
+            <i class="bi bi-bag fs-1"></i>
+            <p class="categoryName">Clothes</p>
           </a>
         </div>
         <div class="col">
-          <a href="link-to-reddit-page" class="logo-item text-center square-container">
-            <i class="bi bi-camera fs-1"></i>
-            <p class="categoryName">Camera</p>
+          <a href="Views/catalog.html#Furniture" class="logo-item text-center square-container">
+            <i class="bi bi-body-text fs-1"></i>
+            <p class="categoryName">Furniture</p>
           </a>
         </div>
         <div class="col">
-          <a href="link-to-facebook-page" class="logo-item text-center square-container">
-            <i class="bi bi-headphones fs-1"></i>
-            <p class="categoryName">HeadPhones</p>
+          <a href="Views/catalog.html#Fashion" class="logo-item text-center square-container">
+            <i class="bi bi-sunglasses fs-1"></i>
+            <p class="categoryName">Fashion</p>
           </a>
         </div>
         <div class="col">
-          <a href="link-to-twitter-page" class="logo-item text-center square-container">
-            <i class="bi bi-controller fs-1"></i>
-            <p class="categoryName">Gaming</p>
+          <a href="Views/catalog.html#MakeUp" class="logo-item text-center square-container">
+            <i class="bi bi-heart-fill fs-1"></i>
+            <p class="categoryName">Makeup</p>
           </a>
         </div>
       </div>
@@ -314,7 +310,7 @@
             <div class="col-12 col-md-6 order-2 order-md-1 text-center text-md-start">
                 <h1 class="hero-title">Enhance Your Music Experience</h1>
                 <p class="hero-description">Immerse yourself in the ultimate sound journey with our premium audio solutions.</p>
-                <button type="button" class="btn btn-outline-danger btn-animated">View All Products</button>
+            <a href="views/catalog.html" class="btn btn-outline-danger btn-animated">View All Products</a>
             </div>
 
             <!-- الصورة -->
@@ -372,7 +368,7 @@
 <div class="container d-flex justify-content-center align-items-center mt-4">
     <div class="row">
         <div class="col-12 text-center">
-            <button type="button" class="btn btn-outline-danger btn-animated">View All Products</button>
+            <a href="views/catalog.html" class="btn btn-outline-danger btn-animated">View All Products</a>
         </div>
     </div>
 </div>
@@ -490,7 +486,7 @@
 
 
 <!-- Footer -->
-<footer class="footer">
+<footer class="footer" id="about">
     <div class="container">
         <div class="row">
             <div class="col-lg-4 footer-section">
@@ -508,10 +504,10 @@
             <div class="col-lg-2 col-md-6 footer-section">
                 <h5>Quick Links</h5>
                 <ul class="footer-links">
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="#about">About Us</a></li>
                     <li><a href="#">Services</a></li>
-                    <li><a href="#">Products</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="views/catalog.html">Products</a></li>
+                    <li><a href="Views/contact.html">Contact</a></li>
                     <li><a href="#">Careers</a></li>
                 </ul>
             </div>
