--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <a href="#about" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="signUp.html" class="nav-link">Log in</a>
+                        <a href="" class="nav-link">Log in</a>
                     </li>
                 </ul>
             </div>
