--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="Views/css/bootstrap.min.css">
     <link rel="stylesheet" href="Views/css/home.css" >
     <link rel="stylesheet" href="Views/css/bootstrap-icons.css">
-    <!-- Bootstrap JS (مع Popper.js) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="Views/js/bootstrap.bundle.min.js"></script>
     <script src="Views/js/home.js"></script>
@@ -27,19 +26,19 @@
         </div>
     </div>
 
-<!-- Nav Bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <!-- Nav Bar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid d-flex align-items-center justify-content-between">
       <!-- Logo -->
       <a class="navbar-brand ms-5" href="#">
         <img id="logo" src="Views/images/logo.png" alt="Logo" width="140" height="50">
       </a>
-  
+
       <!-- Toggle button for mobile view -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-  
+
       <!-- Navigation Links -->
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
@@ -55,33 +54,11 @@
           <li class="nav-item">
             <a href="" class="nav-link">Log in</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                About Us
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                <li><a class="dropdown-item" href="#">Our Team</a></li>
-                <li><a class="dropdown-item" href="#">Our History</a></li>
-            </ul>
-        </li>
-        </ul>
-      </div>
-      
-  
-      <!-- User Icon with Dropdown -->
-      <div class="dropdown me-5">
-        <a href="#" class="btn btn-link dropdown-toggle" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          <i class="fas fa-user fa-2x"></i> <!-- أيقونة المستخدم من Font Awesome -->
-        </a>
-        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-          <li><a class="dropdown-item" href="/profile">Profile</a></li>
-          <li><a class="dropdown-item" href="/settings">Settings</a></li>
-          <li><a class="dropdown-item" href="/orders">Orders</a></li>
-          <li><a class="dropdown-item" href="/logout">Logout</a></li>
         </ul>
       </div>
     </div>
   </nav>
+  <script type="module" src="navbar.js"></script>
     
             <!-- Search Bar and Cart Icon -->
     <!-- Search Bar Section -->
