solve error user...

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <script src="Views/js/bootstrap.bundle.min.js"></script>
     <script src="Views/js/home.js"></script>
     <!-- <script type="module" src="Views/js/homeProduct.js"></script> -->
+    <script type="module" src="" defer></script>
+    <script type="module" src="Config/Constants.js" defer></script>
+
 
    
 
