--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="Views/js/bootstrap.bundle.min.js"></script>
     <script src="Views/js/home.js"></script>
+    <script type="module" src="Config/Constants.js" defer></script>
     <!-- <script type="module" src="Views/js/homeProduct.js"></script> -->
 
    
