link photos category

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 <div class="container my-4">
     <div class="photo-grid">
         <!-- Large item -->
-        <a href="#" class="photo-item photo-large"> <!-- رابط للعنصر الكبير -->
+        <a href="Views/catalog.html#MakeUp" class="photo-item photo-large"> <!-- رابط للعنصر الكبير -->
             <img src="Views/images/GeneralHome/perfum.jpg" alt="Nature" class="img-fluid">
             <div class="photo-content">
                 <h3>Perfume</h3>
@@ -415,13 +415,13 @@
             </div>
         </a>
         <!-- Two small items -->
-        <a href="#" class="photo-item"> <!-- رابط للعنصر الأول الصغير -->
+        <a href="Views/catalog.html#Electronics" class="photo-item"> <!-- رابط للعنصر الأول الصغير -->
             <img src="Views/images/GeneralHome/smartwatch.jpg" alt="Food" class="img-fluid">
             <div class="photo-content">
                 <h4>Tech Innovations</h4>
             </div>
         </a>
-        <a href="#" class="photo-item"> <!-- رابط للعنصر الثاني الصغير -->
+        <a href="Views/catalog.html#Fashion" class="photo-item"> <!-- رابط للعنصر الثاني الصغير -->
             <img src="Views/images/GeneralHome/clothes.jpg" alt="Technology" class="img-fluid">
             <div class="photo-content">
                 <h4>Women’s Collections</h4>
