--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div>
         <div class="bg-dark text-white text-center p-3">
             <span>Winter Sale For All Items And Free Express Delivery - OFF 50%! </span>
-            <a href="#" class="link-light text-decoration-underline">Shop Now</a>
+            <a href="Views/catalog.html#all" class="link-light text-decoration-underline">Shop Now</a>
         </div>
     </div>
 
