--- a/index.html
+++ b/index.html
@@ -531,14 +531,13 @@
             <div class="col-lg-4 footer-section">
                 <h5>Newsletter</h5>
                 <p class="footer-about">Subscribe to our newsletter for updates, news, and exclusive offers.</p>
-                <div class="footer-newsletter">
-                    <input type="email" placeholder="Enter your email">
-                    <button class="newsletter-btn">
-              <i class="fas fa-paper-plane"></i>
-            </button>
-                </div>
+                <form class="footer-newsletter" action="#" method="">
+                    <input type="email" name="email" placeholder="Enter your email" required>
+                    <button type="submit" class="newsletter-btn">
+                        <i class="fas fa-paper-plane"></i>
+                    </button>
+                </form>
             </div>
-        </div>
 
         <div class="footer-bottom">
             <ul class="footer-bottom-links">
